# architecture_mai

./: .env  .gitignore  CMakeLists.txt  README.md  arch_lab.postman_collection.json  docker-compose.yaml  load_data.cpp  load_data.sh  trip_main.cpp  user_main.cpp
auth_service/: Dockerfile  auth_rest.h  auth_service.h
benchmark/: benchmark.sh  get_cache.lua  get_no_cache.lua  performance.md
config/: config.cpp  config.h
database/: cache.cpp  cache.h  database.cpp  database.h  route.cpp  route.h  trip.cpp  trip.h  user.cpp  user.h
docs/: components.md  context.md  contract.yaml
lab_1/: components.md  task.md
mariadb/: Dockerfile  main_script.sql
mariadb/main_script/: main_script.sql
mariadb/sequence/: seq.sql
trip_service/: Dockerfile  trip_rest.h
user_service/: Dockerfile  user_rest.h
utils/: json.h  request.h  validation.h
